# jwt-cli

./: .gitignore  AUTHORS  CONTRIBUTING.md  Makefile.am  NEWS  README.gnu-build-system  README.md  autogen.sh  configure.ac
scripts/: jwt-decode.in
